Slim footer, fix media icon spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -449,9 +449,10 @@ td {
 .footer {
   background-color: var(--grey);
   color: var(--black);
-  padding: 6px 0;
+  padding: 5px 0;
   justify-content: space-between;
   /* text-align: right; */
+  line-height: 40px;
 }
 
 /* .media-icon {
@@ -460,9 +461,9 @@ td {
 /* specifically, I include this to prevent the appearance of a small line next to the img link. For some reason putting the styling here doesn't work, but setting the style in the HTML does work... */
 
 .media-icon img {
-  /* height: 40px;
-  width: 40px; */
-  padding-right: 5px;
+  height: 40px;
+  width: 40px;
+  margin-right: 3px;
   /* text-decoration: none;
   border: none; */
 }
